feat: create api endpoint to upload post image
