# docs/swagger.json
@@ -924,6 +924,50 @@
                 }
             }
         },
+        "/upload": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Upload post image",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "forums"
+                ],
+                "summary": "Upload Post Image",
+                "operationId": "UploadImage",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "post image file",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users/me": {
             "get": {
                 "security": [
@@ -1651,13 +1695,9 @@
         "fund-o_api-server_internal_entity.ReplyCreatePayload": {
             "type": "object",
             "required": [
-                "comment_id",
                 "content"
             ],
             "properties": {
-                "comment_id": {
-                    "type": "string"
-                },
                 "content": {
                     "type": "string"
                 }
